--- a/blogpost.html
+++ b/blogpost.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/estilo.css">
+    <title>Holis blogers</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer el post de la vara</h1>
-    <p>Aquí está el parrafo</p>
+
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo bonito e interesante del post</h1>
+            <p>En este parrafo vamos a poner cosas muy tuanis que se pueden hacer con RAMAS
+
+            </p>
+        </div>
+    </div>
+
 </body>
 </html>
