--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,15 @@
     <title>Holis blogers</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
 
     <div id="container">
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog de cabecera</span>
+        </div>
+        
         <div id="post">
             <h1>Este es el titulo bonito e interesante del post</h1>
             <p>En este parrafo vamos a poner cosas muy tuanis que se pueden hacer con RAMAS</p>
