--- a/blogpost.html
+++ b/blogpost.html
@@ -13,13 +13,14 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog de master</span>
         </div>
         
         <div id="post">
             <h1>Este es el titulo bonito e interesante del post</h1>
             <p>En este parrafo vamos a poner cosas muy tuanis que se pueden hacer con RAMAS</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 
